--- a/FF/app/src/main/res/layout/activity_main.xml
+++ b/FF/app/src/main/res/layout/activity_main.xml
@@ -95,7 +95,7 @@
         app:layout_constraintEnd_toStartOf="@+id/iv_cc2"
         app:layout_constraintTop_toTopOf="@+id/iv_cc2"
         app:srcCompat="@drawable/jb"
-        tools:srcCompat="@drawable/c1" />
+        tools:srcCompat="@drawable/jb" />
 
     <ImageView
         android:id="@+id/iv_cc2"
