--- a/FF/app/src/main/res/layout/activity_raise_seekbar.xml
+++ b/FF/app/src/main/res/layout/activity_raise_seekbar.xml
@@ -10,18 +10,46 @@
         android:id="@+id/sb_raise"
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:min="2"
         android:max="200" />
 
-    <TextView
-        android:id="@+id/tv_raise_sb"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:text="TextView"
-        tools:text="前的数量" />
+        android:layout_height="43dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_raise_sb1"
+            android:layout_width="wrap_content"
+            android:layout_height="44dp"
+            android:layout_weight="1"
+            android:gravity="left"
+            android:text="   2元"
+            tools:text="   2元" />
+
+        <TextView
+            android:id="@+id/tv_raise_sb2"
+            android:layout_width="wrap_content"
+            android:layout_height="44dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="100元"
+            tools:text="100元" />
+
+        <TextView
+            android:id="@+id/tv_raise_sb3"
+            android:layout_width="wrap_content"
+            android:layout_height="44dp"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:text="200元   "
+            tools:text="200元   " />
+    </LinearLayout>
 
     <Button
         android:id="@+id/btn_raise_sb"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:gravity="center"
+        android:text="@string/dialog_btn_raise" />
 </LinearLayout>
