--- a/FF/app/src/main/res/layout/zero.xml
+++ b/FF/app/src/main/res/layout/zero.xml
@@ -7,11 +7,13 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/iv_cm"
         android:layout_width="89dp"
         android:layout_height="90dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/cm"
+        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
         app:layout_constraintEnd_toStartOf="@+id/textView4"
         app:layout_constraintHorizontal_bias="1.0"
@@ -81,15 +83,18 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/iv_pk"
         android:layout_width="89dp"
         android:layout_height="90dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
+        android:background="@drawable/pk"
+        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintTop_toTopOf="@+id/textView4"
         app:layout_constraintVertical_bias="0.512"
-        app:srcCompat="@drawable/pk" />
+        app:srcCompat="@drawable/pk"
+        tools:srcCompat="@drawable/pk" />
 </android.support.constraint.ConstraintLayout>
